home changed to homez

--- a/Home.html
+++ b/Home.html
@@ -14,7 +14,7 @@
 
     <link rel="stylesheet" href="./css/Home.css">
 
-    <title>Home</title>
+    <title>Homez</title>
     
   </head>
   <body>
